--- a/pages/index.html
+++ b/pages/index.html
@@ -5,11 +5,61 @@
 
   <body>
     <%- include('./layout/header'); -%>
-    
-    <div class="container">
-      <h1 class="h1">首頁</h1>
-      <img src="../assets/images/layout.jpg" style="width: 400px;" alt="web layout">
-    </div>
+
+    <main>
+      <div class="container">
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+        <button type="button" class="btn btn-success">Success</button>
+        <button type="button" class="btn btn-warning">Warning</button>
+        <button type="button" class="btn btn-danger">Danger</button>
+      </div>
+
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="/assets/images/retro-computer.jpg" class="card-img-top" alt="..." style="height: 200px">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="/assets/images/layout.jpg" class="card-img-top" alt="..." style="height: 200px">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="/assets/images/javascript.jpg" class="card-img-top" alt="..." style="height: 200px">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional content.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="card">
+              <img src="/assets/images/404.jpg" class="card-img-top" alt="..." style="height: 200px">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
+                  additional content.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <%- include('./layout/footer'); -%>
 
