--- a/pages/page.html
+++ b/pages/page.html
@@ -5,11 +5,10 @@
 
   <body>
     <%- include('./layout/header'); -%>
-    
-    <div class="container">
-      <h1 class="h1">頁面二</h1>
-      <img src="../assets/images/javascript.jpg" style="width: 400px;" alt="javascript">
-    </div>
+
+    <main>
+      
+    </main>
 
     <%- include('./layout/footer'); -%>
 
